--- a/app/src/main/res/layout/activity_how_to_olay.xml
+++ b/app/src/main/res/layout/activity_how_to_olay.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="wovilon.pingpong1.HowToOlayActivity"
+    tools:context="wovilon.pingpong1.HowToPlayActivity"
     android:background="@drawable/menubackground">
 
     <TextView
