--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#b4b4b4</color>
     <color name="colorBlack">#2b2b2b</color>
     <color name="text_color">#000000</color>
     <color name="GreenCol">#0ea500</color>
