--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,87 +4,96 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_settings"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/menubackground"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="wovilon.pingpong1.SettingsActivity"
-    android:background="@drawable/menubackground">
+    tools:context="wovilon.pingpong1.SettingsActivity">
 
     <SeekBar
-        android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="75dp"
         android:id="@+id/generalSound"
         android:layout_width="200dp"
-        android:fadeScrollbars="false"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="75dp"
+        android:fadeScrollbars="false" />
 
     <SeekBar
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:id="@+id/musicSound"
-        android:layout_below="@+id/generalSound"
-        android:layout_alignStart="@+id/generalSound" />
-
-    <SeekBar
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_alignStart="@+id/generalSound"
+        android:layout_below="@+id/generalSound"
+        android:layout_marginTop="20dp" />
+
+    <SeekBar
         android:id="@+id/effectsSound"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/generalSound"
         android:layout_below="@+id/musicSound"
-        android:layout_alignStart="@+id/generalSound" />
+        android:layout_marginTop="20dp" />
 
     <TextView
-        android:text="@string/SoundSettings"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:textColor="@android:color/darker_gray"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/generalSound"
-        android:layout_marginTop="28dp" />
+        android:layout_marginTop="28dp"
+        android:text="@string/SoundSettings"
+        android:textColor="@android:color/darker_gray" />
 
     <TextView
-        android:text="@string/EffectsSound"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/textView6"
-        android:textColor="@android:color/darker_gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/MusicSoundView"
         android:layout_alignTop="@+id/effectsSound"
-        android:layout_alignStart="@+id/MusicSoundView" />
+        android:text="@string/EffectsSound"
+        android:textColor="@android:color/darker_gray" />
 
     <TextView
-        android:text="@string/ControlsSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/textView8"
-        android:textColor="@android:color/darker_gray"
-        android:layout_marginTop="43dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/effectsSound"
         android:layout_below="@+id/effectsSound"
-        android:layout_alignStart="@+id/effectsSound" />
+        android:layout_marginTop="43dp"
+        android:text="@string/ControlsSettings"
+        android:textColor="@android:color/darker_gray" />
 
     <TextView
-        android:text="@string/GeneralSound"
+        android:id="@+id/BallVelocityTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/turbulenceRadioGroup"
+        android:layout_alignStart="@+id/BallVelocitySeekBar"
+        android:text="@string/ball_velocity"
+        android:textColor="@android:color/darker_gray" />
+
+    <TextView
         android:id="@+id/GeneralSoundView"
-        android:textColor="@android:color/darker_gray"
-        android:layout_marginEnd="14dp"
-        android:layout_alignTop="@+id/generalSound"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:text="@string/MusicSound"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/generalSound"
+        android:layout_marginEnd="14dp"
+        android:text="@string/GeneralSound"
+        android:textColor="@android:color/darker_gray" />
+
+    <TextView
         android:id="@+id/MusicSoundView"
-        android:textColor="@android:color/darker_gray"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/GeneralSoundView"
         android:layout_alignTop="@+id/musicSound"
-        android:layout_alignStart="@+id/GeneralSoundView" />
+        android:text="@string/MusicSound"
+        android:textColor="@android:color/darker_gray" />
 
     <RadioGroup
         android:id="@+id/turbulenceRadioGroup"
@@ -122,5 +131,17 @@
             android:text="@string/mode_ship"
             android:textColor="@android:color/darker_gray" />
     </RadioGroup>
+
+    <SeekBar
+        android:id="@+id/BallVelocitySeekBar"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/turbulenceRadioGroup"
+        android:layout_alignStart="@+id/textView6"
+        android:layout_alignTop="@+id/turbulenceRadioGroup"
+        android:max="10"
+        android:progress="5"
+        android:rotation="270" />
 
 </RelativeLayout>
