--- a/app/src/main/res/layout/activity_how_to_olay.xml
+++ b/app/src/main/res/layout/activity_how_to_olay.xml
@@ -12,56 +12,74 @@
     tools:context="wovilon.pingpong1.HowToPlayActivity"
     android:background="@drawable/menubackground">
 
-    <TextView
-        android:text="@string/HespLeft"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:textColor="@android:color/darker_gray"
-        android:singleLine="false"
-        android:textAlignment="center"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/imageView4"
-        android:layout_marginTop="66dp" />
-
-    <TextView
-        android:text="@string/HelpRight"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView3"
-        android:textColor="@android:color/darker_gray"
-        android:singleLine="false"
-        android:textAlignment="center"
-        android:layout_width="150dp"
-        android:layout_alignBaseline="@+id/textView"
-        android:layout_alignBottom="@+id/textView"
-        android:layout_alignStart="@+id/imageView6" />
-
-    <TextView
-        android:text="@string/MainAim"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView4"
-        android:textColor="@android:color/darker_gray"
-        android:singleLine="false"
-        android:textAlignment="center"
-        android:layout_marginBottom="73dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
-
-    <ImageView
-        android:layout_height="300dp"
-        app:srcCompat="@drawable/turnleft"
-        android:id="@+id/imageView4"
-        android:layout_width="150dp"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true">
 
-    <ImageView
-        android:layout_height="300dp"
-        app:srcCompat="@drawable/turnright"
-        android:id="@+id/imageView6"
-        android:layout_width="150dp"
-        android:layout_alignTop="@+id/imageView4"
-        android:layout_alignParentEnd="true" />
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="150dp"
+            android:layout_height="240dp"
+            android:layout_alignLeft="@+id/textView3"
+            android:layout_alignStart="@+id/textView3"
+            android:layout_alignTop="@+id/imageView4"
+            app:srcCompat="@drawable/turnright"
+            android:layout_alignBottom="@+id/imageView4" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/textView"
+            android:layout_alignBottom="@+id/textView"
+            android:layout_marginLeft="39dp"
+            android:layout_marginStart="39dp"
+            android:layout_toEndOf="@+id/imageView4"
+            android:layout_toRightOf="@+id/imageView4"
+            android:singleLine="false"
+            android:text="@string/HelpRight"
+            android:textAlignment="center"
+            android:textColor="@android:color/darker_gray" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/imageView6"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignRight="@+id/imageView6"
+            android:layout_below="@+id/imageView6"
+            android:layout_marginTop="27dp"
+            android:singleLine="false"
+            android:text="@string/MainAim"
+            android:textAlignment="center"
+            android:textColor="@android:color/darker_gray" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="150dp"
+            android:layout_height="240dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView"
+            android:layout_marginTop="27dp"
+            app:srcCompat="@drawable/turnleft" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="34dp"
+            android:singleLine="false"
+            android:text="@string/HespLeft"
+            android:textAlignment="center"
+            android:textColor="@android:color/darker_gray"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
 
 </RelativeLayout>
