--- a/app/src/main/res/layout/activity_win_loose.xml
+++ b/app/src/main/res/layout/activity_win_loose.xml
@@ -19,28 +19,27 @@
         android:textColor="@color/GreenCol"
         android:textSize="@android:dimen/app_icon_size"
         android:textStyle="bold"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="179dp" />
+        android:layout_marginBottom="34dp"
+        android:layout_above="@+id/button1"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:text="@string/Retry"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/button1"
+        android:onClick="onPlayAgain"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp"
-        android:onClick="onPlayAgain" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:text="@string/ToMainMenu"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:id="@+id/button2"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
-        android:layout_toEndOf="@+id/button1"
-        android:layout_marginStart="10dp"
-        android:onClick="onMainMenu" />
+        android:onClick="onMainMenu"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/button1"
+        android:layout_alignLeft="@+id/button1"
+        android:layout_alignStart="@+id/button1" />
 </RelativeLayout>
