--- a/app/src/main/res/layout/activity_win_loose.xml
+++ b/app/src/main/res/layout/activity_win_loose.xml
@@ -21,33 +21,33 @@
         android:textStyle="bold"
         android:layout_above="@+id/Score"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="31dp" />
+        android:layout_marginBottom="14dp" />
 
     <TextView
         android:id="@+id/Score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/HighScore"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
         android:text="@string/Score"
         android:textAllCaps="true"
-        android:textColor="?android:attr/colorPressedHighlight"
+        android:textColor="@android:color/holo_orange_dark"
         android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="28dp"
-        android:layout_above="@+id/HighScore"
-        android:layout_centerHorizontal="true" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/HighScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/High_score"
-        android:textAllCaps="true"
-        android:textColor="?android:attr/colorPressedHighlight"
-        android:textSize="24sp"
-        android:textStyle="bold"
         android:layout_above="@+id/button1"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="20dp"
+        android:text="@string/High_score"
+        android:textAllCaps="true"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <Button
         android:text="@string/Retry"
