--- a/app/src/main/res/layout/level_list_item.xml
+++ b/app/src/main/res/layout/level_list_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+    android:background="@drawable/menubackground"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_vertical_margin"
