--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_menu_cosmos"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="wovilon.pingpong1.MainActivity"
-    android:background="@drawable/menubackground"
-    tools:actionBarNavMode="@color/colorPrimaryDark">
+    tools:actionBarNavMode="@color/colorPrimaryDark"
+    tools:context="wovilon.pingpong1.MainActivity">
 
     <Button
-        android:text="@string/btNewGame"
+        android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="63dp"
-        android:id="@+id/button1"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="63dp"
         android:onClick="onBtNewGame"
+        android:text="@string/btNewGame"
         android:textColor="@color/text_color"
         android:textColorLink="@android:color/holo_blue_dark"
         android:textSize="@dimen/activity_vertical_margin"
@@ -42,32 +41,32 @@
         android:textStyle="normal|bold" />
 
     <Button
-        android:text="@string/Settings"
+        android:id="@+id/button3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button2"
         android:layout_marginTop="17dp"
-        android:id="@+id/button3"
+        android:onClick="onSettingsClick"
+        android:text="@string/Settings"
         android:textColor="@color/text_color"
         android:textColorLink="@android:color/holo_blue_dark"
         android:textSize="@dimen/activity_vertical_margin"
-        android:textStyle="normal|bold"
-        android:layout_below="@+id/button2"
-        android:layout_alignParentStart="true"
-        android:onClick="onSettingsClick" />
+        android:textStyle="normal|bold" />
 
     <Button
-        android:text="@string/Contacts"
+        android:id="@+id/button4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button3"
         android:layout_marginTop="17dp"
-        android:id="@+id/button4"
+        android:onClick="onContactsClick"
+        android:text="@string/Contacts"
         android:textColor="@color/text_color"
         android:textColorLink="@android:color/holo_blue_dark"
         android:textSize="@dimen/activity_vertical_margin"
-        android:textStyle="normal|bold"
-        android:layout_below="@+id/button3"
-        android:layout_alignParentStart="true"
-        android:onClick="onContactsClick" />
+        android:textStyle="normal|bold" />
 
     <Button
         android:id="@+id/Button5"
