--- a/app/src/main/res/layout/activity_levels_list.xml
+++ b/app/src/main/res/layout/activity_levels_list.xml
@@ -4,13 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlack"
+    android:background="@drawable/background_menu_cosmos"
     tools:context="wovilon.pingpong1.LevelsListActivity">
 
-    <ListView
-        android:id="@+id/LevelsListView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="-14dp"
-        tools:layout_editor_absoluteY="-15dp" />
+    <LinearLayout
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="8dp">
+
+        <ListView
+            android:id="@+id/LevelsListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="-12dp"
+            tools:layout_editor_absoluteY="-14dp" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
