--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,10 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="63dp"
+        android:background="@android:color/transparent"
         android:onClick="onBtNewGame"
         android:text="@string/btNewGame"
-        android:textColor="@color/text_color"
+        android:textColor="@android:color/white"
         android:textColorLink="@android:color/holo_blue_dark"
         android:textSize="@dimen/activity_vertical_margin"
         android:textStyle="normal|bold" />
@@ -33,9 +34,10 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/button1"
         android:layout_marginTop="17dp"
+        android:background="@android:color/transparent"
         android:onClick="onHowClick"
         android:text="@string/level_editor"
-        android:textColor="@color/text_color"
+        android:textColor="@android:color/white"
         android:textColorLink="@android:color/holo_blue_dark"
         android:textSize="@dimen/activity_vertical_margin"
         android:textStyle="normal|bold" />
@@ -47,9 +49,10 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/button2"
         android:layout_marginTop="17dp"
+        android:background="@android:color/transparent"
         android:onClick="onSettingsClick"
         android:text="@string/Settings"
-        android:textColor="@color/text_color"
+        android:textColor="@android:color/white"
         android:textColorLink="@android:color/holo_blue_dark"
         android:textSize="@dimen/activity_vertical_margin"
         android:textStyle="normal|bold" />
@@ -61,9 +64,10 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/button3"
         android:layout_marginTop="17dp"
+        android:background="@android:color/transparent"
         android:onClick="onContactsClick"
         android:text="@string/Contacts"
-        android:textColor="@color/text_color"
+        android:textColor="@android:color/white"
         android:textColorLink="@android:color/holo_blue_dark"
         android:textSize="@dimen/activity_vertical_margin"
         android:textStyle="normal|bold" />
@@ -75,9 +79,10 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/button4"
         android:layout_marginTop="17dp"
+        android:background="@android:color/transparent"
         android:onClick="onExitClick"
         android:text="@string/Exit"
-        android:textColor="@color/text_color"
+        android:textColor="@android:color/white"
         android:textColorLink="@android:color/holo_blue_dark"
         android:textSize="@dimen/activity_vertical_margin"
         android:textStyle="normal|bold"
