--- a/app/src/main/res/layout/activity_win_loose.xml
+++ b/app/src/main/res/layout/activity_win_loose.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_win_loose"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_menu_cosmos"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,61 +12,64 @@
     tools:context="wovilon.pingpong1.WinLooseActivity">
 
     <TextView
-        android:text="@string/YouWin"
+        android:id="@+id/WinLoose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/WinLoose"
-        android:textAllCaps="true"
-        android:textColor="@color/GreenCol"
-        android:textSize="@android:dimen/app_icon_size"
-        android:textStyle="bold"
-        android:layout_above="@+id/Score"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="14dp" />
+        android:layout_marginTop="40dp"
+        android:text="@string/YouWin"
+        android:textAllCaps="true"
+        android:textColor="@color/text_color"
+        android:textSize="32sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/Score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/HighScore"
+        android:layout_below="@+id/WinLoose"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="12dp"
         android:text="@string/Score"
         android:textAllCaps="true"
-        android:textColor="@android:color/holo_orange_dark"
-        android:textSize="24sp"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/HighScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
+        android:layout_below="@+id/Score"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="14dp"
         android:text="@string/High_score"
         android:textAllCaps="true"
-        android:textColor="@android:color/holo_orange_dark"
-        android:textSize="24sp"
+        android:textColor="@android:color/background_light"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <Button
-        android:text="@string/Retry"
+        android:id="@+id/button1"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:id="@+id/button1"
-        android:onClick="onPlayAgain"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:background="@android:color/transparent"
+        android:onClick="onPlayAgain"
+        android:text="@string/Retry"
+        android:textColor="@android:color/background_light" />
 
     <Button
-        android:text="@string/ToMainMenu"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
         android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:background="@android:color/transparent"
         android:onClick="onMainMenu"
-        android:layout_marginTop="25dp"
+        android:text="@string/ToMainMenu"
+        android:textColor="@android:color/background_light"
         android:layout_below="@+id/button1"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_alignStart="@+id/button1" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
