--- a/app/src/main/res/layout/level_list_item.xml
+++ b/app/src/main/res/layout/level_list_item.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="@drawable/menubackground"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_vertical_margin"
@@ -15,9 +14,9 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/editor_button"
         android:gravity="center_horizontal|center"
         android:text="TextView"
+        android:textColor="@color/text_color"
         android:textStyle="bold" />
 
 </LinearLayout>
