--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#b4b4b4</color>
     <color name="colorBlack">#2b2b2b</color>
-    <color name="text_color">#000000</color>
+    <color name="text_color">#ffffff</color>
     <color name="GreenCol">#0ea500</color>
     <color name="RedCol">#a50003</color>
 </resources>
